# Brecha_salarial_EDA

./: README.md
EDA/: README.md  pyproject.toml
EDA/data/processed/: datos_2014.csv  datos_procesados3.csv  e.csv
EDA/data/raw/: SDG_0851_SEX_OCU_NB_A-filtered-2024-12-17.csv
EDA/notebooks/: 1.primeraexploración.ipynb  2.EDA.ipynb
